# cse5525_final_project

./: .gitignore  README.md  compute_metrics.py  compute_metrics.slurm  data_analysis.csv  extract_and_save_features_v001.py  extracted_features.db  extracted_features.json  feature_extraction.py  hello_world.py  llm_metric_generation_template.md  main.py  output.txt  prompts_keywords.feather  pyproject.toml  requirements.txt  run_metric.py  run_metric.slurm  shap_experiments.py  submit_all_metrics.sh  supervised_test.py  supervised_test_v002.py  supervised_training_pipeline.ipynb  supervised_training_pipeline.py  supervised_training_pipeline_v002.py  test.slurm  training_pipeline.py  training_pipeline_v02.py  training_pipeline_v04.py
cse5525_final_project/: config.py  database.py  metric.py  metrics.py  util.py
logs/: compute_metrics.err  compute_metrics.out
results/results_20250418_112837/: iqa_arniqa_flive_metrics_results.json  iqa_arniqa_metrics_results.json
results/results_20250418_113505/: iqa_arniqa_clive_metrics_results.json  iqa_arniqa_csiq_metrics_results.json  iqa_arniqa_kadid_metrics_results.json  iqa_arniqa_live_metrics_results.json  iqa_arniqa_spaq_metrics_results.json  iqa_arniqa_tid_metrics_results.json  iqa_brisque_matlab_metrics_results.json  iqa_brisque_metrics_results.json  iqa_clipiqa__metrics_results.json  (+38 more)
scripts/: analyze_metric_compute_times.py  convert_feather_to_json.py  extract_and_save_features.py  iqa.py  list_tables.py  npy_to_sqlite_db.py  plot_metrics.py  print_table_names.py  remove_pngs_in_dir.py  visualize_extracted_features_db.py
(+381 files in other folders)
