[tool.poetry]
name = "cse5525-final-project"
version = "0.1.0"
description = ""
authors = ["Steven Broaddus <Steven.Broaddus220@gmail.com>", "Tommy Tong <ttommy8888@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
