[tool.poetry]
name = "cse5525-final-project"
version = "0.1.0"
description = ""
authors = ["Steven Broaddus <Steven.Broaddus220@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
spacy = "^3.8.5"
keybert = "^0.9.0"
pandas = "^2.2.3"
seaborn = "^0.13.2"
shap = "^0.47.2"
matplotlib = "^3.10.1"
xgboost = "^3.0.0"
numpy = "^1.26.1"
pyarrow = "^19.0.1"

torch = { version = "^2.7.0+cu128", source = "pytorch-cu128" }
torchvision = { version = "^0.22.0+cu128", source = "pytorch-cu128" }
torchaudio = { version = "^2.7.0+cu128", source = "pytorch-cu128" }

[[tool.poetry.source]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
